Edits For Landing

--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
 </div>
 <i class="fas fa-chevron-left"></i>
 <i class="fas fa-chevron-right"></i>
-
+<ul>
+<li></li>
+<li class="active"></li>
+<li></li>
+</ul>
 </div>
 
 <!-- End Landing -->
