--- a/index.html
+++ b/index.html
@@ -57,5 +57,45 @@
 </div>
 
 <!-- End Landing -->
+<!-- Start Services -->
+<div class="services">
+    <div class="container">
+        <div class="largeText">
+            <h2>SERVICES</h2>
+            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+        </div>
+        <div class="services-content">
+            <div class="content">
+                <i class="fas fa-tv"></i>
+                <div class="words">
+                <h3>Vorem amet intuitive</h3>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam.</p>
+            </div>
+        </div>
+            <div class="content">
+                <i class="fas fa-cog"></i>
+                <div class="words">
+                <h3>Vorem amet intuitive</h3>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam.</p>
+            </div>
+            </div>
+            <div class="content">
+                <i class="fas fa-pencil-ruler"></i>
+                <div class="words">
+                <h3>Vorem amet intuitive</h3>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam.</p>
+            </div>
+            </div>
+            <div class="content">
+                <i class="fas fa-camera"></i>
+                <div class="words word">
+                <h3>Vorem amet intuitive</h3>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam.</p>
+            </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End Services -->
 </body>
 </html>
