--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
         <div class="services-content">
             <div class="content">
-                <i class="fas fa-tv"></i>
+                <i class="fas fa-desktop"></i>
                 <div class="words">
                 <h3>Vorem amet intuitive</h3>
                 <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam.</p>
@@ -97,5 +97,31 @@
     </div>
 </div>
 <!-- End Services -->
+<!-- Start Design -->
+<div class="design">
+    <div class="imgdesign">
+        <img src="images/mobile.png" alt="">
+    </div>
+    <div class="design-content">
+        <h3>OUR DESIGN COMES WITH...</h3>
+        <div class="responsive">
+            <i class="fas fa-desktop"></i>
+            <p>responsive Design</p>
+    </div>
+        <div class="responsive">
+            <i class="fas fa-desktop"></i>
+            <p>Modern And Clean Design</p>
+        </div>
+        <div class="responsive">
+            <i class="fas fa-desktop"></i>
+            <p>Clean Code</p>
+        </div>
+        <div class="responsive">
+            <i class="fas fa-desktop"></i>
+            <p>Browser Friendly</p>
+        </div>
+    </div>
+</div>
+<!-- End Design -->
 </body>
 </html>
