--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <!-- Start Header -->  
-<header>
+<header id="home">
     <div class="container">
         <a href="#">
             <img src="images/logo.png">
@@ -22,9 +22,9 @@
         <div class="nav">
             <i class="fas fa-bars menu"></i>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portifolio</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portifolio">Portifolio</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Pricing</a></li>
                     <li><a href="#">Contact</a></li>
@@ -58,7 +58,7 @@
 
 <!-- End Landing -->
 <!-- Start Services -->
-<div class="services">
+<div class="services" id="services">
     <div class="container">
         <div class="largeText">
             <h2>SERVICES</h2>
@@ -123,5 +123,83 @@
     </div>
 </div>
 <!-- End Design -->
+<!-- Start Portifolio -->
+<div class="portifolio" id="portifolio">
+<div class="container">
+<div class="largeText">
+    <h2>PORTIFOLIO</h2>
+    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+</div>
+    <ul class="shuffle">
+        <li>All</li>
+        <li>App</li>
+        <li>Photo</li>
+        <li>Web</li>
+        <li>Print</li>
+    </ul>
+</div>
+<div class="shuffle-content">
+    <div class="box">
+        <img src="images/shuffle-01.jpg" alt="">
+        <div class="caption">
+            <h3>Awesome Image</h3>
+            <p>Photography</p>
+        </div>
+    </div>
+    <div class="box">
+        <img src="images/shuffle-02.jpg" alt="">
+        <div class="caption">
+            <h3>Awesome Image</h3>
+            <p>Photography</p>
+        </div>
+    </div>
+    <div class="box">
+        <img src="images/shuffle-03.jpg" alt="">
+        <div class="caption">
+            <h3>Awesome Image</h3>
+            <p>Photography</p>
+        </div>
+    </div>
+    <div class="box">
+        <img src="images/shuffle-04.jpg" alt="">
+        <div class="caption">
+            <h3>Awesome Image</h3>
+            <p>Photography</p>
+        </div>
+    </div>
+    <div class="box">
+        <img src="images/shuffle-05.jpg" alt="">
+        <div class="caption">
+            <h3>Awesome Image</h3>
+            <p>Photography</p>
+        </div>
+    </div>
+    <div class="box">
+        <img src="images/shuffle-06.jpg" alt="">
+        <div class="caption">
+            <h3>Awesome Image</h3>
+            <p>Photography</p>
+        </div>
+    </div>
+    <div class="box">
+        <img src="images/shuffle-07.jpg" alt="">
+        <div class="caption">
+            <h3>Awesome Image</h3>
+            <p>Photography</p>
+        </div>
+    </div>
+    <div class="box">
+        <img src="images/shuffle-08.jpg" alt="">
+        <div class="caption">
+            <h3>Awesome Image</h3>
+            <p>Photography</p>
+        </div>
+    </div>
+</div>
+<div class="button-box">
+<button class="button"><a href="#">MORE</a> </button>
+</div>
+</div>
+<!-- End Portifolio -->
 </body>
 </html>
