--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <!-- Start Header -->  
-<header id="home">
+<header>
     <div class="container">
         <a href="#">
             <img src="images/logo.png">
@@ -22,9 +22,9 @@
         <div class="nav">
             <i class="fas fa-bars menu"></i>
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#portifolio">Portifolio</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Portifolio</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Pricing</a></li>
                     <li><a href="#">Contact</a></li>
@@ -58,7 +58,7 @@
 
 <!-- End Landing -->
 <!-- Start Services -->
-<div class="services" id="services">
+<div class="services">
     <div class="container">
         <div class="largeText">
             <h2>SERVICES</h2>
@@ -124,7 +124,7 @@
 </div>
 <!-- End Design -->
 <!-- Start Portifolio -->
-<div class="portifolio" id="portifolio">
+<div class="portifolio">
 <div class="container">
 <div class="largeText">
     <h2>PORTIFOLIO</h2>
@@ -201,5 +201,26 @@
 </div>
 </div>
 <!-- End Portifolio -->
+<!-- Start Awesome -->
+<div class="awesome">
+    <video src="images/awesome-video.mp4" autoplay muted loop></video>
+    <div class="textawesome">
+        <h2>SUPER AWESOME VIDEO HERE</h2>
+        <p>Its All You Need</p>
+        <button>SEE MORE</button>
+    </div>
+</div>
+<!-- End Awesome -->
+<!-- Start About -->
+<div class="about">
+    <div class="container">
+        <div class="largetext">
+            <h2>ABOUT US</h2>
+            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+            <img src="images/about.png" alt="">
+        </div>
+    </div>
+</div>
+<!-- End About -->
 </body>
 </html>
