--- a/index.html
+++ b/index.html
@@ -217,10 +217,36 @@
         <div class="largetext">
             <h2>ABOUT US</h2>
             <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
-            <img src="images/about.png" alt="">
         </div>
+        <img src="images/about.png" alt="">
     </div>
 </div>
 <!-- End About -->
+<!-- Start Stats -->
+<div class="stats">
+    <div class="container">
+        <div class="box">
+            <i class="fas fa-mug-hot"></i>
+            <h3>1.236</h3>
+            <p>Coffee Drinks</p>
+        </div>
+        <div class="box">
+            <i class="far fa-folder"></i>
+            <h3>256</h3>
+            <p>Complated Projects</p>
+        </div>
+        <div class="box">
+            <i class="fas fa-envelope"></i>
+            <h3>1.743</h3>
+            <p>Mail Sent</p>
+        </div>
+        <div class="box">
+            <i class="fas fa-trophy"></i>
+            <h3>17</h3>
+            <p>awords Received</p>
+        </div>
+    </div>
+</div>
+<!-- End Stats -->
 </body>
 </html>
