--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <div class="nav">
             <i class="fas fa-bars menu"></i>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portifolio</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portifolio">Portifolio</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#pricing">Pricing</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
                 <div class="form">
                     <i class="fas fa-search search"></i>
@@ -37,7 +37,7 @@
 </header>
 <!-- End Header -->
 <!-- Start Landing -->
-<div class="landing">
+<div class="landing" id="home">
     <div class="overlay"></div>
     <div class="text">
         <div class="contnet">
@@ -58,7 +58,7 @@
 
 <!-- End Landing -->
 <!-- Start Services -->
-<div class="services">
+<div class="services" id="services">
     <div class="container">
         <div class="largeText">
             <h2>SERVICES</h2>
@@ -124,7 +124,7 @@
 </div>
 <!-- End Design -->
 <!-- Start Portifolio -->
-<div class="portifolio">
+<div class="portifolio" id="portifolio">
 <div class="container">
 <div class="largeText">
     <h2>PORTIFOLIO</h2>
@@ -212,7 +212,7 @@
 </div>
 <!-- End Awesome -->
 <!-- Start About -->
-<div class="about">
+<div class="about" id="about">
     <div class="container">
         <div class="largetext">
             <h2>ABOUT US</h2>
@@ -248,5 +248,64 @@
     </div>
 </div>
 <!-- End Stats -->
+<!-- Start Skills -->
+<div class="skills">
+    <div class="container">
+    <div class="box-of-skill">
+        <div class="testimonials">
+            <h3>TESTIMONIALS</h3>
+            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+            <div class="box-of-testimonials">
+                <img src="images/skills-01.jpg" alt="">
+                <div class="textplace">
+                <h4>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</h4>
+                <p>John Doe, CEO</p>
+                </div>
+            </div>
+            <div class="box-of-testimonials">
+                <img src="images/skills-02.jpg" alt="">
+                <div class="textplace">
+                <h4>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</h4>
+                <p>John Doe, CEO</p>
+                </div>
+            </div>
+            <ul>
+                <li></li>
+                <li class="active"></li>
+                <li></li>
+            </ul>
+        </div>
+        <div class="testskills">
+            <h3>SKILLS</h3>
+            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+            <div class="box-of-skills">
+                <p>ADOBE</p>
+                <span class="span1">
+                    <div class="number"></div>
+                </span>
+            </div>
+            <div class="box-of-skills">
+                <p>HTML & CSS</p>
+                <span class="span2">
+                    <div class="number"></div>
+                </span>
+            </div>
+            <div class="box-of-skills">
+                <p>JAVASCRIPT</p>
+                <span class="span3">
+                    <div class="number"></div>
+                </span>
+            </div>
+            <div class="box-of-skills">
+                <p>PHP</p>
+                    <span class="span4">
+                    <div class="number"></div>
+                    </span>
+            </div>
+        </div>
+    </div>
+    </div>
+</div>
+<!-- End Skills -->
 </body>
 </html>
