--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <div class="nav">
             <i class="fas fa-bars menu"></i>
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#portifolio">Portifolio</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#pricing">Pricing</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Portifolio</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
                 <div class="form">
                     <i class="fas fa-search search"></i>
@@ -37,7 +37,7 @@
 </header>
 <!-- End Header -->
 <!-- Start Landing -->
-<div class="landing" id="home">
+<div class="landing">
     <div class="overlay"></div>
     <div class="text">
         <div class="contnet">
@@ -58,7 +58,7 @@
 
 <!-- End Landing -->
 <!-- Start Services -->
-<div class="services" id="services">
+<div class="services">
     <div class="container">
         <div class="largeText">
             <h2>SERVICES</h2>
@@ -124,7 +124,7 @@
 </div>
 <!-- End Design -->
 <!-- Start Portifolio -->
-<div class="portifolio" id="portifolio">
+<div class="portifolio">
 <div class="container">
 <div class="largeText">
     <h2>PORTIFOLIO</h2>
@@ -212,7 +212,7 @@
 </div>
 <!-- End Awesome -->
 <!-- Start About -->
-<div class="about" id="about">
+<div class="about">
     <div class="container">
         <div class="largetext">
             <h2>ABOUT US</h2>
@@ -307,5 +307,94 @@
     </div>
 </div>
 <!-- End Skills -->
+<!-- Start Quote -->
+<div class="quote">
+    <div class="tranparent"></div>
+    <div class="container">
+        <q>accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</q>
+        <span>John Doe</span>
+    </div>
+</div>
+<!-- End Quote -->
+<!-- Start Pricing -->
+<div class="pricing">
+    <div class="container">
+        <div class="largeText">
+            <h2>PRICING</h2>
+            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+        </div>
+        <div class="plans">
+            <div class="plan">
+                <div class="head">
+                <h3>BASIC</h3>
+                <span>19</span>
+            </div>
+            <ul>
+                <li> Feature No 1 </li>
+                <li> Extra Feature </li>
+                <li> Extra Feature No 2 </li>
+                <li> Feature</li>
+            </ul>
+            <div class="foot"><a href="#">Buy Now</a> </div>
+            </div>
+            <div class="plan">
+                <div class="head">
+                <h3>PREMIUM</h3>
+                <span>29</span>
+            </div>
+            <ul>
+                <li>Feature No 1</li>
+                <li>Extra Feature </li>
+                <li>Extra Feature No 2</li>
+                <li>Feature</li>
+            </ul>
+            <div class="foot"><a href="#">Buy Now</a> </div>
+            </div>
+            <div class="plan">
+                <div class="head">
+                <h3>PRO</h3>
+                <span>39</span>
+            </div>
+            <ul>
+                <li>Feature No 1</li>
+                <li>Extra Feature </li>
+                <li>Extra Feature No 2</li>
+                <li>Feature</li>
+            </ul>
+            <div class="foot"><a href="#">Buy Now</a> </div>
+            </div>
+            <div class="plan">
+                <div class="head">
+                <h3>PLATINUM</h3>
+                <span>49</span>
+            </div>
+            <ul>
+                <li>Feature No 1</li>
+                <li>Extra Feature </li>
+                <li>Extra Feature No 2</li>
+                <li>Feature</li>
+            </ul>
+            <div class="foot"><a href="#">Buy Now</a> </div>
+            </div>
+        </div>
+        <div class="contactUs">
+            <p>Contact us if you have special request</p>
+            <button><a href="#">Contact Us</a> </button>
+        </div>
+    </div>
+</div>
+<!-- End Pricing -->
+<!-- Start Subscribe -->
+<div class="subscribe">
+    <div class="container">
+        <form>
+            <input type="email" placeholder="Your Email" required name="email">
+            <i class="far fa-envelope"></i>
+            <button type="submit">SUBSCRIBE</button>
+        </form>
+        <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blan dit aliquet elit, eget tincidunt.</p>
+    </div>
+</div>
+<!-- End Subscribe -->
 </body>
 </html>
