--- a/index.html
+++ b/index.html
@@ -396,5 +396,63 @@
     </div>
 </div>
 <!-- End Subscribe -->
+<!-- Start Contact -->
+<div class="contact">
+    <div class="container">
+        <div class="largeText">
+            <h2>Contact Us</h2>
+            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+        </div>
+        <div class="contact-content">
+            <form action="">
+            <input type="text" name="name" placeholder="Your Name">
+            <br>
+            <input type="email" name="email" placeholder="Your Email">
+            <br>
+            <textarea name="message" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <br>
+            <button>SEND MESSAGE</button>
+        </form>
+        <div class="second">
+            <div class="groupf">
+                <h2>GET IN TOUCH</h2>
+                <p>+00 123.456.789
+                    <br>
+                    +00 123.456.789
+                </p>
+            </div>
+            <div class="groupf">
+                <h2>WHERE WE ARE</h2>
+                <address class="awesome1">Awesome Address 17
+                    <br>
+                    New York,NYC
+                    <br>
+                    123-4567-890
+                    <br>
+                    USA
+                </address>
+            </div>
+        </div>
+        </div>
+    </div>
+</div>
+<!-- End Contact -->
+<!-- Start footer -->
+<footer>
+    <div class="container">
+    <img src="images/logo.png" alt="">
+    <div class="social">
+        <h3>WE ARE SOCIAL</h3>
+        <div class="iconSocial">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fas fa-home"></i>
+            <i class="fab fa-linkedin"></i>
+        </div>
+        <p>© 2021 <span>Kasper</span> All Right Reserved</p>
+    </div>
+</div>
+</footer>
+<!-- End footer -->
 </body>
 </html>
