--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel= "icon" href= "images/iconbiography.png" >
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -22,12 +23,12 @@
         <div class="nav">
             <i class="fas fa-bars menu"></i>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portifolio</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portifolio">Portifolio</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#pricing">Pricing</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
                 <div class="form">
                     <i class="fas fa-search search"></i>
@@ -37,7 +38,7 @@
 </header>
 <!-- End Header -->
 <!-- Start Landing -->
-<div class="landing">
+<div class="landing" id="home">
     <div class="overlay"></div>
     <div class="text">
         <div class="contnet">
@@ -58,7 +59,7 @@
 
 <!-- End Landing -->
 <!-- Start Services -->
-<div class="services">
+<div class="services" id="services">
     <div class="container">
         <div class="largeText">
             <h2>SERVICES</h2>
@@ -124,7 +125,7 @@
 </div>
 <!-- End Design -->
 <!-- Start Portifolio -->
-<div class="portifolio">
+<div class="portifolio" id="portifolio">
 <div class="container">
 <div class="largeText">
     <h2>PORTIFOLIO</h2>
@@ -212,7 +213,7 @@
 </div>
 <!-- End Awesome -->
 <!-- Start About -->
-<div class="about">
+<div class="about" id="about">
     <div class="container">
         <div class="largetext">
             <h2>ABOUT US</h2>
@@ -317,7 +318,7 @@
 </div>
 <!-- End Quote -->
 <!-- Start Pricing -->
-<div class="pricing">
+<div class="pricing" id="pricing">
     <div class="container">
         <div class="largeText">
             <h2>PRICING</h2>
@@ -397,7 +398,7 @@
 </div>
 <!-- End Subscribe -->
 <!-- Start Contact -->
-<div class="contact">
+<div class="contact" id="contact">
     <div class="container">
         <div class="largeText">
             <h2>Contact Us</h2>
